# oceanbase-multimodal-demo

./: .env.example  .gitignore  DATABASE_INIT.md  LICENSE  README.md  conversation_ui.py  init_database.py  pyproject.toml  start.sh  test_environment.py  update_image_vectors.py  update_promotion_policy.py
srd/: __init__.py
srd/agents/: __init__.py  conversation_agent.py
srd/data/: __init__.py  sofa_data_preprocessor.py
srd/llm/: __init__.py  llm.py  tongyi.py
srd/prompt/: __init__.py  prompt_list.py
srd/tools/: __init__.py  retrieval_tool.py  tool.py
